@@ -1,4 +1,4 @@
-# Copyright (C) 2008-2013 Free Software Foundation, Inc.
+# Copyright (C) 2008-2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,25 +19,8 @@
 import re
 import gdb
 
-def _iterator (pointer, len):
-    start = pointer
-    end = pointer + len
-    while pointer != end:
-        yield ('[%d]' % int (pointer - start), pointer.dereference())
-        pointer += 1
-
-# Same as _iterator but can be told to raise an exception.
-def _iterator_except (pointer, len):
-    start = pointer
-    end = pointer + len
-    while pointer != end:
-        if exception_flag:
-            raise gdb.MemoryError ('hi bob')
-        yield ('[%d]' % int (pointer - start), pointer.dereference())
-        pointer += 1
-
 # Test returning a Value from a printer.
-class string_print (object):
+class string_print:
     def __init__(self, val):
         self.val = val
 
@@ -45,7 +28,22 @@ class string_print (object):
         return self.val['whybother']['contents']
 
 # Test a class-based printer.
-class ContainerPrinter (object):
+class ContainerPrinter:
+    class _iterator:
+        def __init__ (self, pointer, len):
+            self.start = pointer
+            self.pointer = pointer
+            self.end = pointer + len
+
+        def __iter__(self):
+            return self
+
+        def next(self):
+            if self.pointer == self.end:
+                raise StopIteration
+            result = self.pointer
+            self.pointer = self.pointer + 1
+            return ('[%d]' % int (result - self.start), result.dereference())
 
     def __init__(self, val):
         self.val = val
@@ -54,27 +52,31 @@ class ContainerPrinter (object):
         return 'container %s with %d elements' % (self.val['name'], self.val['len'])
 
     def children(self):
-        return _iterator(self.val['elements'], self.val['len'])
-
-# Treats a container as array.
-class ArrayPrinter (object):
-    def __init__(self, val):
-        self.val = val
-
-    def to_string(self):
-        return 'array %s with %d elements' % (self.val['name'], self.val['len'])
-
-    def children(self):
-        return _iterator(self.val['elements'], self.val['len'])
-
-    def display_hint (self):
-        return 'array'
+        return self._iterator(self.val['elements'], self.val['len'])
 
 # Flag to make NoStringContainerPrinter throw an exception.
 exception_flag = False
 
 # Test a printer where to_string is None
-class NoStringContainerPrinter (object):
+class NoStringContainerPrinter:
+    class _iterator:
+        def __init__ (self, pointer, len):
+            self.start = pointer
+            self.pointer = pointer
+            self.end = pointer + len
+
+        def __iter__(self):
+            return self
+
+        def next(self):
+            if self.pointer == self.end:
+                raise StopIteration
+            if exception_flag:
+                raise gdb.MemoryError, 'hi bob'
+            result = self.pointer
+            self.pointer = self.pointer + 1
+            return ('[%d]' % int (result - self.start), result.dereference())
+
     def __init__(self, val):
         self.val = val
 
@@ -82,9 +84,9 @@ class NoStringContainerPrinter (object):
         return None
 
     def children(self):
-        return _iterator_except (self.val['elements'], self.val['len'])
+        return self._iterator(self.val['elements'], self.val['len'])
 
-class pp_s (object):
+class pp_s:
     def __init__(self, val):
         self.val = val
 
@@ -95,42 +97,42 @@ class pp_s (object):
             raise Exception("&a(%s) != b(%s)" % (str(a.address), str(b)))
         return " a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
 
-class pp_ss (object):
+class pp_ss:
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
         return "a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
 
-class pp_sss (object):
+class pp_sss:
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
         return "a=<" + str(self.val['a']) + "> b=<" + str(self.val["b"]) + ">"
 
-class pp_multiple_virtual (object):
+class pp_multiple_virtual:
     def __init__ (self, val):
         self.val = val
 
     def to_string (self):
         return "pp value variable is: " + str (self.val['value'])
 
-class pp_vbase1 (object):
+class pp_vbase1:
     def __init__ (self, val):
         self.val = val
 
     def to_string (self):
         return "pp class name: " + self.val.type.tag
 
-class pp_nullstr (object):
+class pp_nullstr:
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
         return self.val['s'].string(gdb.target_charset())
 
-class pp_ns (object):
+class pp_ns:
     "Print a std::basic_string of some kind"
 
     def __init__(self, val):
@@ -145,7 +147,7 @@ class pp_ns (object):
 
 pp_ls_encoding = None
 
-class pp_ls (object):
+class pp_ls:
     "Print a std::basic_string of some kind"
 
     def __init__(self, val):
@@ -160,7 +162,7 @@ class pp_ls (object):
     def display_hint (self):
         return 'string'
 
-class pp_hint_error (object):
+class pp_hint_error:
     "Throw error from display_hint"
 
     def __init__(self, val):
@@ -172,7 +174,7 @@ class pp_hint_error (object):
     def display_hint (self):
         raise Exception("hint failed")
 
-class pp_children_as_list (object):
+class pp_children_as_list:
     "Throw error from display_hint"
 
     def __init__(self, val):
@@ -184,7 +186,7 @@ class pp_children_as_list (object):
     def children (self):
         return [('one', 1)]
 
-class pp_outer (object):
+class pp_outer:
     "Print struct outer"
 
     def __init__ (self, val):
@@ -197,24 +199,24 @@ class pp_outer (object):
         yield 's', self.val['s']
         yield 'x', self.val['x']
 
-class MemoryErrorString (object):
+class MemoryErrorString:
     "Raise an error"
 
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
-        raise gdb.MemoryError ("Cannot access memory.")
+        raise gdb.MemoryError ("Cannot access memory.");
 
     def display_hint (self):
         return 'string'
 
-class pp_eval_type (object):
+class pp_eval_type:
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
-        gdb.execute("bt", to_string=True)
+	gdb.execute("bt", to_string=True)
         return "eval=<" + str(gdb.parse_and_eval("eval_func (123456789, 2, 3, 4, 5, 6, 7, 8)")) + ">"
 
 def lookup_function (val):
